crates/decorous-backend/src/snapshots/decorous_backend__tests__everything_in_script_tag_is_in_context_init.snap
---
source: crates/decorous-backend/src/lib.rs
expression: "String::from_utf8(out).unwrap()"
---
const dirty = new Uint8Array(new ArrayBuffer(1));
function make_fragment(ctx) {
return {
c() {
},
m(target) {
},
u(ctx, dirty) {
},
d() {
},
}
}
function __init_ctx() {
let x = 3;
x = 4;
return [x];
}
const ctx = __init_ctx();
const fragment = make_fragment(ctx);
fragment.c();
fragment.m(document.getElementById("app"));
let updating = false;
function __schedule_update(ctx_idx, val) {
ctx[ctx_idx] = val;
dirty[Math.max(((ctx_idx + 7) // 8) - 1, 0)] |= 1 << (ctx_idx % 8);
if (updating) return;
updating = true;
Promise.resolve().then(() => {
fragment.u(ctx, dirty);
updating = false;
});
}

