crates/decorous-backend/src/snapshots/decorous_backend__tests__render_with_event_listeners_works.snap
---
source: crates/decorous-backend/src/lib.rs
expression: "String::from_utf8(out).unwrap()"
---
function make_fragment(ctx) {
let e0;
let e1;
let e2;
return {
c() {
e0 = document.createElement("p");
e1 = document.createTextNode(ctx[0]);
e2 = document.createElement("button");
e2.addEventListener("click", () => {if (ctx[0] == 3) { __schedule_update(0, x = 44); }});
e2.textContent = "Clickme";
},
m(target) {
target.appendChild(e0);
e0.appendChild(e1);
target.appendChild(e2);
},
u(ctx) {
e1.data = ctx[0];
},
d() {
e0.parentNode.removeChild(e0);
e2.parentNode.removeChild(e2);
},
}
}
function __init_ctx() {
let x = 3;
return [x];
}
const ctx = __init_ctx();
const fragment = make_fragment(ctx);
fragment.c();
fragment.m(document.getElementById("app"));
let updating = false;
function __schedule_update(ctx_idx, val) {
if (updating) return;
updating = true;
Promise.resolve().then(() => {
ctx[ctx_idx] = val;
fragment.u(ctx);
updating = false;
});
}

